		as its eta_m
	Per-gene and per-segment mutation methods and mutation parameters created
		for all VectorIndividual subclasses.
	Gene parameter accessor methods added for all vector species.
	DoubleVectorIndividual and FloatVectorIndividual can now handle
		heterogeneous types.
	Tweak to mutation rate in Sum
	Due to the addition of per-gene bounding in vectors, DEBreeder now always
		creates fully bounded individuals.  We might loosen that constraint
		in the future.
	Tweaks to Tutorial 2 to reflect per-gene mutation probability
	Added per-generation description to SimpleStatistics
	eval.slave-name is renamed to eval.slave.name
	eval.runtime is renamed to eval.slave.runtime
	eval.run-evolve is renamed to eval.slave.run-evolve
	eval.slave.muzzle added to Slave to prevent it from printing to the screen
	Added rotated Griewank as a problem in ecsuite
	Population and Subpopulation now properly check for load-inds conflicts
	Added some flexibility to setting mu and lambda in ES
	Added Langerman to ECSuite
	Bug fixes and improvemdnts to RandomRestarts, which also no longer works
		with Steady State (for the time being).
	Added elite-frac to Subpopulation, and a method for determining the number
		of elites in general.
	Added fraction mechanism to BestSelection
	elite-frac changed to elite-fraction in SimpleBreeder
	n-frac changed to n-fraction in BestSelection
	BitVectorSpecies added.  It is now the species for BitVectorIndividual
	BitVectorIndividual now has TWO kinds of mutation: flip and reset. Flip
		is the default (as it was before, when it had no name).
	Duplicate retries to vector gene mutation.  
	Added merge and num-tests to SimpleEvaluator, and discussion of
		noisy distributed problems
	Fixed bug in Polynomial Mutation which only arises when the gene is
		*unbounded*.  Thanks to Mark Coletti <mcoletti@gmail.com>
	StringBuffer replaced wiht StringBuilder in GPNode
	Documenation fixes to PTC2 and Uniform
	Added the push facility and the ec/app/push example app